# mantyx-sdk

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  README.md  cliff.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: agent-runs-protocol.md  wire-protocol.md
githooks/: README.md  pre-commit
go/: CHANGELOG.md  CONTRIBUTING.md  EXTRACT.md  README.md  client.go  doc.go  errors.go  errors_test.go  go.mod  go.sum  local_resolver.go  mock_server_test.go  oauth.go  oauth_test.go  run_test.go  schema.go  schema_test.go  session.go  session_test.go  sse.go  tools.go  tools_test.go  version.go  version_test.go
go/a2asrv/: agentexec.go  agentexec_test.go  doc.go  json_test.go  serve.go
go/docs/: agent-runs-protocol.md  oauth.md  wire-protocol.md
go/examples/: README.md
go/examples/a2a-expose/: README.md  go.mod  go.sum  main.go
go/examples/a2a-tools/: README.md  go.mod  main.go
go/examples/agent-by-id/: README.md  go.mod  main.go
go/examples/list-models/: README.md  go.mod  main.go
go/examples/mcp-tools/: README.md  go.mod  go.sum  main.go
go/examples/mixed-tools/: README.md  go.mod  main.go
go/examples/oneshot/: README.md  go.mod  main.go
go/examples/output-schema/: go.mod  main.go
go/examples/session-chat/: README.md  go.mod  main.go
go/examples/streaming/: README.md  go.mod  main.go
python/: CHANGELOG.md  CONTRIBUTING.md  EXTRACT.md  README.md  pyproject.toml
python/docs/: agent-runs-protocol.md
python/examples/: README.md
python/examples/a2a-expose/: README.md  main.py  pyproject.toml
python/examples/a2a-tools/: README.md  main.py  pyproject.toml
python/examples/agent-by-id/: README.md  main.py  pyproject.toml
python/examples/list-models/: README.md  main.py  pyproject.toml
python/examples/mcp-tools/: README.md  main.py  pyproject.toml
python/examples/mixed-tools/: README.md  main.py  pyproject.toml
python/examples/oneshot-local-tool/: README.md  main.py  pyproject.toml
python/examples/session-chat/: README.md  main.py  pyproject.toml
python/examples/streaming/: README.md  main.py  pyproject.toml
python/src/mantyx/: __init__.py  _local_resolver.py  _schema.py  _version.py  a2a_server.py  async_client.py  client.py  errors.py  oauth.py  sse.py  tools.py
python/tests/: conftest.py  test_a2a_server.py  test_async.py  test_errors.py  test_models.py  test_oauth.py  test_run.py  test_session.py  test_tools.py  test_version.py
scripts/: changelog.mjs  sync-agent-runs-doc.mjs  sync-version.mjs
site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
site/scripts/: sync-shared.mjs
site/src/: env.d.ts
site/src/components/: CTA.astro  Hero.astro  InstallCards.astro  MantyxLockup.astro  QuickstartTabs.astro
site/src/components/starlight/: EmptyHero.astro  Header.astro  SiteTitle.astro
site/src/content/docs/: index.mdx
site/src/content/docs/docs/: errors.md  examples.mdx  metadata.md  models.md  output-schema.md  quickstart.mdx  reasoning.md  run-guards.md  streaming.md  wire-protocol.md
site/src/content/docs/docs/agents/: ephemeral.md  persisted.md  sessions.md
site/src/content/docs/docs/getting-started/: authentication.md  index.md
site/src/content/docs/docs/reference/: index.md
site/src/content/docs/docs/tools/: a2a.md  local.md  mantyx.md  mcp.md  plugin.md
site/src/styles/: global.css
ts/: CHANGELOG.md  CONTRIBUTING.md  EXTRACT.md  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
ts/examples/: README.md
ts/examples/a2a-expose/: README.md  index.ts  package.json
ts/examples/a2a-tools/: README.md  index.ts  package-lock.json  package.json
ts/examples/agent-by-id/: README.md  index.ts  package.json
ts/examples/list-models/: README.md  index.ts  package.json
ts/examples/mcp-tools/: README.md  index.ts  package-lock.json  package.json  tsconfig.json
ts/examples/mixed-tools/: README.md  index.ts  package.json
ts/examples/oneshot-local-tool/: README.md  index.ts  package.json
ts/examples/session-chat/: README.md  index.ts  package-lock.json  package.json
ts/examples/streaming/: README.md  index.ts  package.json
ts/src/: a2a-server.ts  client.ts  errors.ts  index.ts  local-resolver.ts  oauth.ts  sse.ts  tools.ts  version.ts  zod-to-json-schema.ts
ts/test/: a2a-server.test.ts  errors.test.ts  models.test.ts  oauth.test.ts  run.test.ts  session.test.ts  tools.test.ts  version.test.ts
ts/test/helpers/: mock-server.ts
