[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mantyx-sdk"
description = "Official Python SDK for the MANTYX agent runtime. Define ephemeral agents, mix server-side MANTYX tools with locally-executed tools, run them remotely."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "MANTYX", email = "support@mantyx.com" }]
keywords = ["mantyx", "agent", "llm", "sdk", "tool-use", "agentic", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.6,<3",
    "typing-extensions>=4.5; python_version < '3.12'",
]

[project.optional-dependencies]
dev = [
    "anyio>=4.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "build>=1.2",
]

[project.urls]
Homepage = "https://mantyx.com"
Source = "https://github.com/mantyx-io/mantyx-sdk"
Documentation = "https://mantyx-io.github.io/mantyx-sdk/"
Changelog = "https://github.com/mantyx-io/mantyx-sdk/blob/main/python/CHANGELOG.md"
Issues = "https://github.com/mantyx-io/mantyx-sdk/issues"

[tool.hatch.version]
path = "src/mantyx/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mantyx"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/EXTRACT.md",
    "/LICENSE",
    "/pyproject.toml",
    "/sdk-version.txt",
    "/docs",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
