[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "mantyx-sdk"
description = "Official Python SDK for the MANTYX agent runtime. Define ephemeral agents, mix server-side MANTYX tools with locally-executed tools, run them remotely."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "MANTYX", email = "support@mantyx.com" }]
keywords = ["mantyx", "agent", "llm", "sdk", "tool-use", "agentic", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dynamic = ["version"]
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.6,<3",
    "typing-extensions>=4.5; python_version < '3.12'",
    # Drives `define_local_a2a` / `define_local_mcp` URL-only resolution:
    # `mcp` is the official MCP Python SDK (stdio + Streamable HTTP transports);
    # `anyio` lets the synchronous `MantyxClient` drive that async MCP code via
    # a per-client BlockingPortal.
    "mcp>=1.27,<2",
    "anyio>=4.5",
]

[project.optional-dependencies]
# Pulls the official Agent2Agent (A2A) Python SDK plus a Starlette/uvicorn
# integration. Required when you import `mantyx.a2a_server`. Keeping it as an
# optional extra means the base wheel doesn't grow ~30 MB of protobuf-generated
# bindings unless you actually need the server.
a2a-server = [
    "a2a-sdk[http-server]>=1.0,<2",
    "uvicorn>=0.30",
]
dev = [
    "anyio>=4.0",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "build>=1.2",
    "a2a-sdk[http-server]>=1.0,<2",
    "uvicorn>=0.30",
]

[project.urls]
Homepage = "https://mantyx.com"
Source = "https://github.com/mantyx-io/mantyx-sdk"
Documentation = "https://mantyx-io.github.io/mantyx-sdk/"
Changelog = "https://github.com/mantyx-io/mantyx-sdk/blob/main/python/CHANGELOG.md"
Issues = "https://github.com/mantyx-io/mantyx-sdk/issues"

[tool.hatch.version]
path = "src/mantyx/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mantyx"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/EXTRACT.md",
    "/LICENSE",
    "/pyproject.toml",
    "/sdk-version.txt",
    "/docs",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific
]
ignore = [
    "E501", # line length handled by formatter
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
disallow_incomplete_defs = false
