[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantyx-sdk-example-a2a-tools"
version = "0.0.0"
description = "Combine remote (mantyx_a2a) and local (define_local_a2a) Agent2Agent peers in one run."
requires-python = ">=3.9"
dependencies = ["mantyx-sdk"]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.sources]
mantyx-sdk = { path = "../..", editable = true }
