[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantyx-sdk-example-mcp-tools"
version = "0.0.0"
description = "Combine a remote (mantyx_mcp) and a local (define_local_mcp) MCP server in one run."
requires-python = ">=3.9"
dependencies = ["mantyx-sdk"]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.sources]
mantyx-sdk = { path = "../..", editable = true }
