[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantyx-sdk-example-mixed-tools"
version = "0.0.0"
description = "Combines local, MANTYX, and plugin tools in one agent run."
requires-python = ">=3.9"
dependencies = ["mantyx-sdk"]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.sources]
mantyx-sdk = { path = "../..", editable = true }
