[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mantyx-sdk-example-streaming"
version = "0.0.0"
description = "Stream agent run events to stdout."
requires-python = ">=3.9"
dependencies = ["mantyx-sdk"]

[tool.hatch.build.targets.wheel]
bypass-selection = true

[tool.uv.sources]
mantyx-sdk = { path = "../..", editable = true }
